# MouseSign

./: .gitignore  README.md  README.zh-CN.md  main.py  prompt.md  pyproject.toml  run.sh
core/: __init__.py  hotkeys.py  mouse_control.py  text_to_trajectory.py  trajectory.py
gui/: __init__.py  main_window.py  overlay.py
tests/: test_core.py
utils/: __init__.py  bezier.py  platform_utils.py
