[project]
name = "mouse-sign"
version = "0.1.0"
description = "鼠标手写签名生成器 - 用鼠标绘制真实手写风格的签名"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.6",
    "pyautogui>=0.9.54",
    "pynput>=1.8.2",
]

[project.scripts]
mouse-sign = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "gui", "utils"]
